--- a/Mindway_3.html
+++ b/Mindway_3.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="Mindway_3.css" />
 </head>
 <body>
-    <div>
-        Mindway
+    <div class="header">
+        <div id="Mindway">
+            Mindway
+        </div>
+        <div id="name">
+            <div>주여진</div>
+            <div>이상혁</div>
+            <div>나현욱</div>
+            <div>배경진</div>
+            <div>정하진</div>
+            <div>박정우</div>
+            <div>이산</div>
+        </div>
     </div>
 </body>
 </html>
